# dmote-fw

./: .gitignore  .gitmodules  0001-Add-lock-file.patch  Cargo.toml  Readme.md  flake.nix  justfile  memory.x  shell.nix
firmware/: Cargo.toml
firmware/keyberon/layout-macro/src/: lib.rs
firmware/keyberon/src/: debounce.rs  lib.rs  matrix.rs
firmware/src/: lib.rs
firmware/stm32f1xx-hal/: Cargo.toml
firmware/stm32f1xx-hal/src/: dma.rs
fw/: Cargo.toml  justfile
fw/keyberon/: Cargo.toml  README.md
fw/keyberon/src/: action.rs  key_code.rs  layout.rs  lib.rs
fw/src/: hid.rs  key_code.rs  keyboard.rs  lib.rs  main.rs  scan.rs  trigger.rs
fw/stm32f1/src/stm32f100/: mod.rs
fw/stm32f1xx-hal/: Cargo.toml
fw/stm32f1xx-hal/src/: usb.rs
keyberon/: Cargo.toml
keyberon/src/: action.rs  hid.rs  layout.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
src/: lib.rs  main.rs
state-slurp/: Cargo.toml
state-slurp/src/: main.rs
stm32f1/src/: generic.rs
