[package]
name = "dmote-fw"
version = "0.1.0"
authors = ["Jimmy Brisson <theotherjimmy@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5"
usb-device = "0.2.8"
generic-array = "0.14.4"
panic-halt = "0.2"

[dependencies.keyberon]
version = "0.2.0"
path = "keyberon"

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium","stm32-usbd"]

[profile.dev]
panic = "abort"
debug = true
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
incrimental = false
debug = true
opt-level = "z"
