[package]
name = "keyberon"
version = "0.2.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>", "Robin Krahl <robin.krahl@ireas.org>"]
edition = "2018"
description = "Pure Rust keyboard firmware."
documentation = "https://docs.rs/keyberon"
repository = "https://github.com/TeXitoi/keyberon"
keywords = ["keyboard", "usb-device", "firmware"]
categories = ["embedded", "no-std"]
license = "MIT"
readme = "README.md"

[dependencies]
usb-device = "0.2.0"
